add private route

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-keycloak/web": "^3.4.0",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
+    "keycloak-js": "^20.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.7",
@@ -50,7 +53,7 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-css-modules": "^4.6.4",
-    "@types/react-dom": "^18.0.6",
+    "@types/react-dom": "^18.0.10",
     "@types/react-input-mask": "^3.0.2",
     "@types/react-text-mask": "^5.4.11",
     "eslint": "^8.28.0",
